# music_trainer

./: .gitignore  CMakeLists.txt  README.md  commit  mainwindow.cpp  mainwindow.h  mainwindow.ui
assets/styles/: styles.qss
audio/: CMakeLists.txt  audio.cpp
audio/generators/: IGenerator.h  IntervalGenerator.cpp  IntervalGenerator.h
music/: pitchutils.cpp
src/: CMakeLists.txt  main.cpp
src/audio/: CMakeLists.txt  audio.cpp  audio.h
src/audio/dsp/: oscillator.cpp  oscillator.h
src/audio/generators/: GeneratedAudio.h  IGenerator.h  IntervalGenerator.cpp  IntervalGenerator.h  generatorfactory.cpp  generatorfactory.h  notegenerator.cpp  notegenerator.h
src/audio/playback/: noteplayer.cpp  noteplayer.h
src/core/: CMakeLists.txt
src/core/common/interfaces/: IExerciseWidget.h
src/core/common/models/: Difficulty.h  Mode.h  Note.h  Rhythm.h
src/core/controllers/: iexercisecontroller.cpp  iexercisecontroller.h  intervalbuildcontroller.cpp  intervalbuildcontroller.h  intervaldirectioncontroller.cpp  intervaldirectioncontroller.h  intervalidentifycontroller.cpp  intervalidentifycontroller.h  intervalrecognisecontroller.cpp  intervalrecognisecontroller.h  tilescontroller.cpp  tilescontroller.h
src/core/controllers/chords/: chordbuildcontroller.cpp  chordbuildcontroller.h  chordidentifycontroller.cpp  chordidentifycontroller.h  chordinversioncontroller.cpp  chordinversioncontroller.h  chordrootcontroller.cpp  chordrootcontroller.h
src/core/controllers/common/: ichoiceexercisecontroller.h  iexercisecontroller.h  irhythmexercisecontroller.h  itilesexercisecontroller.h  tilescontroller.cpp
src/core/controllers/intervals/: intervalbuildcontroller.cpp  intervalbuildcontroller.h  intervaldirectioncontroller.cpp  intervaldirectioncontroller.h  intervalidentifycontroller.cpp  intervalidentifycontroller.h  intervalrecognisecontroller.cpp  intervalrecognisecontroller.h
src/core/controllers/notes/: notebuildcontroller.cpp  notebuildcontroller.h  noteguesscontroller.cpp  noteguesscontroller.h  noterecognisecontroller.cpp  noterecognisecontroller.h
src/core/controllers/rhythm/: rhythmrecognisecontroller.cpp  rhythmrecognisecontroller.h
src/core/data/samples/: sample.h  sampleloader.cpp  sampleloader.h  samplerepository.cpp  samplerepository.h
src/core/factory/: registryfactory.h  sessionfactory.h  sessionregistry.h
src/core/factory/registry/: chordsessions.h  intervalsessions.h  notesessions.h  rhythmsessions.h
src/core/sessions/: intervalbuildsession.cpp  intervalbuildsession.h  intervaldirectionsession.cpp  intervaldirectionsession.h  intervalidentifysession.cpp  intervalidentifysession.h  intervalrecognisesession.cpp  intervalrecognisesession.h  isession.cpp  isession.h
src/core/sessions/chords/: chordbuildsession.cpp  chordbuildsession.h  chordidentifysession.cpp  chordidentifysession.h  chordinversionsession.cpp  chordinversionsession.h  chordrootsession.cpp  chordrootsession.h
src/core/sessions/common/: isession.h  notilessession.cpp  notilessession.h  tilessession.cpp  tilessession.h
src/core/sessions/intervals/: intervalbuildsession.cpp  intervalbuildsession.h  intervaldirectionsession.cpp  intervaldirectionsession.h  intervalidentifysession.cpp  intervalidentifysession.h  intervalrecognisesession.cpp  intervalrecognisesession.h
src/core/sessions/notes/: notebuildsession.cpp  notebuildsession.h  noteguesssession.cpp  noteguesssession.h  noterecognisesession.cpp  noterecognisesession.h
src/core/sessions/rhythm/: rhythmrecognisesession.cpp  rhythmrecognisesession.h  rhythmsession.cpp  rhythmsession.h
src/generators/: CMakeLists.txt  GeneratedAudio.h  IGenerator.h  generatedrhythm.h  notegenerator.cpp  notegenerator.h
src/generators/chords/: chordgenerator.cpp  chordgenerator.h
src/generators/intervals/: IntervalGenerator.cpp  IntervalGenerator.h
src/generators/notes/: notegenerator.cpp  notegenerator.h
src/generators/rhythm/: rhythmgenerator.cpp  rhythmgenerator.h
src/gui/: CMakeLists.txt  ExerciseWidget.h  intervalblockwidget.cpp  intervalblockwidget.h  intervalblockwidget.ui  mainmenuwidget.cpp  mainmenuwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gui/blocks/: IBlockWidget.h  chordblockwidget.cpp  chordblockwidget.h  chordblockwidget.ui  intervalblockwidget.cpp  intervalblockwidget.h  intervalblockwidget.ui  mainmenuwidget.cpp  mainmenuwidget.h  mainmenuwidget.ui  noteblockwidget.cpp  noteblockwidget.h  noteblockwidget.ui  sidebarwidget.cpp  sidebarwidget.h  sidebarwidget.ui  startwidget.cpp  startwidget.h
src/gui/common/: notetileswidget.cpp  notetileswidget.h  notetileswidget.ui  octavetileswidget.cpp  octavetileswidget.h  octavetileswidget.ui  rhythmcanvaswidget.cpp  rhythmcanvaswidget.h
src/gui/exercises/: IExerciseWidget.h  exercisenotileswidget.cpp  exercisenotileswidget.h  exercisenotileswidget.ui  exerciserhythmwidget.cpp  exerciserhythmwidget.h  exerciserhythmwidget.ui  exercisewithtileswidget.cpp  exercisewithtileswidget.h  exercisewithtileswidget.ui  intervalexercisewidget.cpp  intervalexercisewidget.h  intervalexercisewidget.ui  intervalrecognisewidget.cpp  intervalrecognisewidget.h
src/log/: CMakeLists.txt
src/music/: CMakeLists.txt  musicutils.cpp  musicutils.h  pitchutils.cpp  pitchutils.h
